force-app/main/default/objects/custom_create180__c/custom_create180__c.object-meta.xml
<CustomObject>
    <label>Custom created object180</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects180</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>