force-app/main/default/objects/custom_create180__c/fields/custom_create_180field532__c.field-meta.xml
<CustomField>
    <fullName>custom_create_180field532__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 180field532</label>
    <type>Checkbox</type>
</CustomField>